// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as danger 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #ffffff;
  background-color: #f03e3e;
}

.emotion-0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: #c92a2a;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 1px 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0"
>
  Primary Button
</button>
`;

exports[`renders as icon 1`] = `
.emotion-1 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4px;
  color: #868e96;
  background-color: transparent;
  vertical-align: middle;
}

.emotion-1:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: rgba(0,36,73,0.05);
}

.emotion-0 {
  height: 24px;
  width: 24px;
  vertical-align: middle;
}

.emotion-0 * {
  vector-effect: inherit;
}

<button
  class="emotion-1"
>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
</button>
`;

exports[`renders as primary 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #ffffff;
  background-color: #4263eb;
}

.emotion-0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 1px 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0"
>
  Primary Button
</button>
`;

exports[`renders as secondary 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: rgba(0,5,9,0.87);
  background-color: transparent;
}

.emotion-0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: rgba(0,36,73,0.05);
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 1px 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0"
>
  Primary Button
</button>
`;

exports[`renders when disabled 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #ffffff;
  background-color: #4263eb;
}

.emotion-0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 1px 2px 4px rgba(0,31,62,0.19);
}

<button
  disabled=""
  class="emotion-0"
>
  Disabled Button
</button>
`;

exports[`renders without crashing 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #ffffff;
  background-color: #4263eb;
}

.emotion-0:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 1px 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0"
>
  Test Button
</button>
`;
